force-app/main/default/objects/Project__c/fields/Actual_Received__c.field-meta.xml
<CustomField>
    <fullName>Actual_Received__c</fullName>
    <formula>General_Accounting_Unit__r.Amount_Raised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>