force-app/main/default/objects/Project__c/fields/Additional_Derivatives__c.field-meta.xml
<CustomField>
    <fullName>Additional_Derivatives__c</fullName>
    <inlineHelpText>What additional derivatives will facilitate more ministry in the region? (Study Bible, Audio Bible, Reach4Life, Treasure Hunt Bible, other)</inlineHelpText>
    <label>Additional Derivatives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>