force-app/main/default/objects/Project__c/fields/Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget__c</fullName>
    <inlineHelpText>Read Only: this amount is completed by the review committee.</inlineHelpText>
    <label>Approved Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>