force-app/main/default/objects/Project__c/fields/Approved_by_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Publishing__c</fullName>
    <label>Approved by Publishing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>