force-app/main/default/objects/Project__c/fields/Available_to_Spend__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Spend__c</fullName>
    <formula>General_Accounting_Unit__r.Amount_Raised__c -  Project_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GAU Amount Raised - Project Expenses</inlineHelpText>
    <label>Available to Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>