force-app/main/default/objects/Project__c/fields/bib_lastupdatedate__c.field-meta.xml
<CustomField>
    <fullName>bib_lastupdatedate__c</fullName>
    <description>Last Update Date from Project Updates Submitted -- MAX on Created Date</description>
    <label>Last Project Update</label>
    <summarizedField>Narrative__c.CreatedDate</summarizedField>
    <summaryForeignKey>Narrative__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>