force-app/main/default/objects/Project__c/fields/Biblica_s_Translation__c.field-meta.xml
<CustomField>
    <fullName>Biblica_s_Translation__c</fullName>
    <inlineHelpText>If other translations are suitable, how would Biblica&apos;s translation complement them?</inlineHelpText>
    <label>Biblica&apos;s Translation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>