force-app/main/default/objects/Project__c/fields/Church_Growth__c.field-meta.xml
<CustomField>
    <fullName>Church_Growth__c</fullName>
    <inlineHelpText>How is the Church growing in the region?</inlineHelpText>
    <label>Church Growth</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>