force-app/main/default/objects/Project__c/fields/Clickup_Errors__c.field-meta.xml
<CustomField>
    <fullName>Clickup_Errors__c</fullName>
    <label>Clickup Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>