force-app/main/default/objects/Project__c/fields/Clickup_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Clickup_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clickup External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>