force-app/main/default/objects/Project__c/fields/Clickup_Project_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Clickup_Project_Created_Date__c</fullName>
    <label>Clickup Project Created Date</label>
    <type>DateTime</type>
</CustomField>