force-app/main/default/objects/Project__c/fields/Clickup_Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Clickup_Project_Team__c</fullName>
    <label>Clickup Project Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biblica</fullName>
                <default>true</default>
                <label>Biblica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>