force-app/main/default/objects/Project__c/fields/Clickup_Space__c.field-meta.xml
<CustomField>
    <fullName>Clickup_Space__c</fullName>
    <label>Clickup Space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projects</fullName>
                <default>true</default>
                <label>Projects</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>