force-app/main/default/objects/Project__c/fields/Completed_Project_Budget_Link__c.field-meta.xml
<CustomField>
    <fullName>Completed_Project_Budget_Link__c</fullName>
    <inlineHelpText>Please share the link to the completed project budget.</inlineHelpText>
    <label>Completed Project Budget Link</label>
    <type>Url</type>
</CustomField>