force-app/main/default/objects/Project__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <description>A counter that gets incremented whenever a new child Resource Order gets linked to the project.</description>
    <label>Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>