force-app/main/default/objects/Project__c/fields/Countries_Served__c.field-meta.xml
<CustomField>
    <fullName>Countries_Served__c</fullName>
    <inlineHelpText>After saving, add all the countries served from the right sidebar. It is not directly editable here.</inlineHelpText>
    <label>Countries Served</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>