force-app/main/default/objects/Project__c/fields/Driving_Partners__c.field-meta.xml
<CustomField>
    <fullName>Driving_Partners__c</fullName>
    <inlineHelpText>What partners (ministry and publishing partners) have driven the need for a new Biblica translation in this language?</inlineHelpText>
    <label>Driving Partners</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>