force-app/main/default/objects/Project__c/fields/Estimated_Reach__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Reach__c</fullName>
    <inlineHelpText>Quantity: How many people will be directly and indirectly impacted annually?</inlineHelpText>
    <label>Estimated Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>