force-app/main/default/objects/Project__c/fields/Estimated_Reach_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Reach_Explanation__c</fullName>
    <inlineHelpText>Explain the breakdown of reach in non print and print formats.</inlineHelpText>
    <label>Estimated Reach Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>