force-app/main/default/objects/Project__c/fields/ETEN_Critical_26__c.field-meta.xml
<CustomField>
    <fullName>ETEN_Critical_26__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETEN Critical 26</label>
    <type>Checkbox</type>
</CustomField>