force-app/main/default/objects/Project__c/fields/ETEN_Top_100__c.field-meta.xml
<CustomField>
    <fullName>ETEN_Top_100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETEN Top 100</label>
    <type>Checkbox</type>
</CustomField>