force-app/main/default/objects/Project__c/fields/Existing_Translation_Suitability__c.field-meta.xml
<CustomField>
    <fullName>Existing_Translation_Suitability__c</fullName>
    <inlineHelpText>Why are the translations documented above not suitable for ministry in the region? (please provide point of view from Biblica and other local Church leaders)</inlineHelpText>
    <label>Existing Translation Suitability</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>