force-app/main/default/objects/Project__c/fields/Feasibility__c.field-meta.xml
<CustomField>
    <fullName>Feasibility__c</fullName>
    <inlineHelpText>Please discuss the factors necessary to implement this project effectively, and why, in light of those factors, you feel this project will be successful.</inlineHelpText>
    <label>Feasibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>