force-app/main/default/objects/Project__c/fields/Featured_Project__c.field-meta.xml
<CustomField>
    <fullName>Featured_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will indicate whether the project will show in the Featured Projects section of the Donor Portal. Only 5 projects will be displayed.</inlineHelpText>
    <label>Featured Project</label>
    <type>Checkbox</type>
</CustomField>