force-app/main/default/objects/Project__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY20</fullName>
            </value>
            <value>
                <fullName>FY21</fullName>
            </value>
            <value>
                <fullName>FY22</fullName>
            </value>
            <value>
                <fullName>FY23</fullName>
            </value>
            <value>
                <fullName>FY24</fullName>
            </value>
            <value>
                <fullName>FY25</fullName>
            </value>
            <value>
                <fullName>FY26</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>