force-app/main/default/objects/Project__c/fields/FT_80_20__c.field-meta.xml
<CustomField>
    <fullName>FT_80_20__c</fullName>
    <inlineHelpText>Please score yourself from 1-10. 1 being poor, 5 average, and 10 excellent.</inlineHelpText>
    <label>FT &quot;80/20&quot;</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>