force-app/main/default/objects/Project__c/fields/FT_Score__c.field-meta.xml
<CustomField>
    <fullName>FT_Score__c</fullName>
    <formula>CASE(FT_Strategy__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0) 
+
CASE(FT_Impact__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0) 
+
CASE(FT_Partners__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0) 
+
CASE(FT_Scalability__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0)
+
CASE(FT_80_20__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0)</formula>
    <label>FT Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>