force-app/main/default/objects/Project__c/fields/Funds_Raised__c.field-meta.xml
<CustomField>
    <fullName>Funds_Raised__c</fullName>
    <formula>General_Accounting_Unit__r.Current_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount Available on the GAU</inlineHelpText>
    <label>Funds Raised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>