force-app/main/default/objects/Project__c/fields/Gateway_Language__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>&quot;Gateway&quot; Language</label>
    <type>Checkbox</type>
</CustomField>