force-app/main/default/objects/Project__c/fields/General_Accounting_Unit__c.field-meta.xml
<CustomField>
    <fullName>General_Accounting_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Accounting Unit</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>