force-app/main/default/objects/Project__c/fields/Geographical_Location__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Location__c</fullName>
    <inlineHelpText>Where are this language&apos;s speakers located geographically?</inlineHelpText>
    <label>Geographical Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>