force-app/main/default/objects/Project__c/fields/How_many_speakers__c.field-meta.xml
<CustomField>
    <fullName>How_many_speakers__c</fullName>
    <inlineHelpText>How many speakers of the language?</inlineHelpText>
    <label>How many speakers?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>