force-app/main/default/objects/Project__c/fields/Impact_Quality__c.field-meta.xml
<CustomField>
    <fullName>Impact_Quality__c</fullName>
    <inlineHelpText>To what extent will this project change the way people experience the Bible? To what extent will it promote consistent, meaningful reflect on Scripture?</inlineHelpText>
    <label>Impact Quality</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>