force-app/main/default/objects/Project__c/fields/Impact_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Impact_Quantity__c</fullName>
    <inlineHelpText>How many people will be directly and indirectly impacted annually?</inlineHelpText>
    <label>Impact Quantity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>