force-app/main/default/objects/Project__c/fields/Includes_Secondary_Languages__c.field-meta.xml
<CustomField>
    <fullName>Includes_Secondary_Languages__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this project include resources in other secondary languages (i.e. Spanish, French, English, etc.)? If so, please state the reason(s) why.</inlineHelpText>
    <label>Includes Secondary Languages</label>
    <type>Checkbox</type>
</CustomField>