force-app/main/default/objects/Project__c/fields/Innovation_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Collaboration__c</fullName>
    <inlineHelpText>Has the Innovation team been consulted and approve of this plan?</inlineHelpText>
    <label>Innovation Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>