force-app/main/default/objects/Project__c/fields/Issue_Resolution_Plan__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution_Plan__c</fullName>
    <inlineHelpText>What can be done to prevent and/or prepare for these issues?</inlineHelpText>
    <label>Issue Resolution Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>