force-app/main/default/objects/Project__c/fields/Key_Goals__c.field-meta.xml
<CustomField>
    <fullName>Key_Goals__c</fullName>
    <label>Key Goals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>