force-app/main/default/objects/Project__c/fields/Language_Community__c.field-meta.xml
<CustomField>
    <fullName>Language_Community__c</fullName>
    <label>Language Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_Communities</valueSetName>
    </valueSet>
</CustomField>