force-app/main/default/objects/Project__c/fields/LMP_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>LMP_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LMP Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (LMP Project Manager)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>