force-app/main/default/objects/Project__c/fields/Local_In_Country_Funds_Available__c.field-meta.xml
<CustomField>
    <fullName>Local_In_Country_Funds_Available__c</fullName>
    <inlineHelpText>Can funds be raised locally/in-country to support this translation?</inlineHelpText>
    <label>Local/In-Country Funds Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>