force-app/main/default/objects/Project__c/fields/LTP_Project__c.field-meta.xml
<CustomField>
    <fullName>LTP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The LTP project that this LMP project is building on.</inlineHelpText>
    <label>LTP Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>LMP Projects</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>