force-app/main/default/objects/Project__c/fields/LTP_Project_Leader__c.field-meta.xml
<CustomField>
    <fullName>LTP_Project_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LTP Project Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (LTP Project Leader)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>