force-app/main/default/objects/Project__c/fields/LTP_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>LTP_Project_Manager__c</fullName>
    <label>LTP Project Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>