force-app/main/default/objects/Project__c/fields/Media_Format__c.field-meta.xml
<CustomField>
    <fullName>Media_Format__c</fullName>
    <inlineHelpText>What are the current available formats or pathways that will be used with this project?</inlineHelpText>
    <label>Media Format</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
                <isActive>false</isActive>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>ePub/PDF</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>