force-app/main/default/objects/Project__c/fields/Media_Format_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Media_Format_Explanation__c</fullName>
    <inlineHelpText>What formats or pathways will need to be created or developed for this project to succeed?</inlineHelpText>
    <label>Media Format Explanation</label>
    <length>32708</length>
    <type>LongTextArea</type>
</CustomField>