force-app/main/default/objects/Project__c/fields/Ministry_Context__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Context__c</fullName>
    <inlineHelpText>What is the ministry need or opportunity that is addressed by project?</inlineHelpText>
    <label>WHAT? - Ministry Context</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>