force-app/main/default/objects/Project__c/fields/MPP_Approved__c.field-meta.xml
<CustomField>
    <fullName>MPP_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create in Clickup</label>
    <type>Checkbox</type>
</CustomField>