force-app/main/default/objects/Project__c/fields/New_or_Continuation__c.field-meta.xml
<CustomField>
    <fullName>New_or_Continuation__c</fullName>
    <label>New or Continuation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Continuation - From Previous FY</fullName>
            </value>
            <value>
                <fullName>Continuation - From Multi-Year Pause</fullName>
            </value>
            <value>
                <fullName>Continuation</fullName>
                <isActive>false</isActive>
                <label>Continuation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>