force-app/main/default/objects/Project__c/fields/Non_Print_Reach__c.field-meta.xml
<CustomField>
    <fullName>Non_Print_Reach__c</fullName>
    <inlineHelpText>Determined by quarterly reports on actual non print activities. Not directly editable.</inlineHelpText>
    <label>Non-Print Reach</label>
    <summarizedField>Narrative__c.Delivery_Total__c</summarizedField>
    <summaryForeignKey>Narrative__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>