force-app/main/default/objects/Project__c/fields/Number_of_Complete_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Complete_Deliverables__c</fullName>
    <label>Number of Complete Deliverables</label>
    <summaryFilterItems>
        <field>Project_Deliverable__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Deliverable__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>