force-app/main/default/objects/Project__c/fields/Other_Available_Translations__c.field-meta.xml
<CustomField>
    <fullName>Other_Available_Translations__c</fullName>
    <inlineHelpText>What other translations are available in this language? Please provide a brief overview of each translation. Include names and copyright dates. What is the scope, etc?</inlineHelpText>
    <label>Other Available Translations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>