force-app/main/default/objects/Project__c/fields/Other_In_Progress_Translations__c.field-meta.xml
<CustomField>
    <fullName>Other_In_Progress_Translations__c</fullName>
    <inlineHelpText>Are any other translation organizations currently working on a similar language/translation?</inlineHelpText>
    <label>Other In-Progress Translations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>