force-app/main/default/objects/Project__c/fields/Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Outcomes__c</fullName>
    <inlineHelpText>** An outcome is evidence that you caused something – a change in attitude, knowledge, behavior, etc.</inlineHelpText>
    <label>Outcomes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>