force-app/main/default/objects/Project__c/fields/Outputs__c.field-meta.xml
<CustomField>
    <fullName>Outputs__c</fullName>
    <inlineHelpText>What outputs AND outcomes will these activities generate?
** An output is evidence that you did something - expressed in numbers, units, etc.</inlineHelpText>
    <label>Outputs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>