force-app/main/default/objects/Project__c/fields/Outputs_and_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Outputs_and_Outcomes__c</fullName>
    <inlineHelpText>What outputs AND outcomes will these activities generate?
** An output is evidence that you did something - expressed in numbers, units, etc.
** An outcome is evidence that you caused something – a change in attitude, knowledge, behavior, etc.</inlineHelpText>
    <label>Outputs and Outcomes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>