force-app/main/default/objects/Project__c/fields/Partner_Translation_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Partner_Translation_Utilization__c</fullName>
    <inlineHelpText>How would these partners use a new translation in their ministry?</inlineHelpText>
    <label>Partner Translation Utilization</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>