force-app/main/default/objects/Project__c/fields/Partnership_Director__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>