force-app/main/default/objects/Project__c/fields/Potential_Issues_or_Delays__c.field-meta.xml
<CustomField>
    <fullName>Potential_Issues_or_Delays__c</fullName>
    <inlineHelpText>What issues could potentially delay or jeopardize this project? (economic, geographic, political issues, partners, etc.)</inlineHelpText>
    <label>Potential Issues or Delays</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>