force-app/main/default/objects/Project__c/fields/Previous_Project__c.field-meta.xml
<CustomField>
    <fullName>Previous_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects (Previous Project)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>