force-app/main/default/objects/Project__c/fields/Print_Reach__c.field-meta.xml
<CustomField>
    <fullName>Print_Reach__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Archived. Use Printed reach instead.</description>
    <inlineHelpText>Archived. Use Printed reach instead.</inlineHelpText>
    <label>Archive_Print Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>