force-app/main/default/objects/Project__c/fields/Printed_Reach__c.field-meta.xml
<CustomField>
    <fullName>Printed_Reach__c</fullName>
    <inlineHelpText>Determined by quarterly reports on actual print activities. Read only.</inlineHelpText>
    <label>Printed Reach</label>
    <summarizedField>Narrative__c.Print_Delivery__c</summarizedField>
    <summaryForeignKey>Narrative__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>