force-app/main/default/objects/Project__c/fields/Project_Details__c.field-meta.xml
<CustomField>
    <fullName>Project_Details__c</fullName>
    <inlineHelpText>Consider and describe: What is the ultimate problem(s) this project addresses? What outcomes (changes) will it generate? What are the specific steps to achieve those outcomes? What key resources (“dominoes”) are needed, and are they in place?</inlineHelpText>
    <label>HOW? - Project Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>