force-app/main/default/objects/Project__c/fields/Project_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Project_Expenses__c</fullName>
    <formula>General_Accounting_Unit__r.Total_Expense_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Expenses Amount from the GAU</inlineHelpText>
    <label>Project Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>