force-app/main/default/objects/Project__c/fields/Project_Image__c.field-meta.xml
<CustomField>
    <fullName>Project_Image__c</fullName>
    <formula>IF(NOT(ISBLANK(Project_Image_URL__c)), IMAGE(Project_Image_URL__c, &apos;Project Image&apos;, 50, 100), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Image</label>
    <type>Text</type>
</CustomField>