force-app/main/default/objects/Project__c/fields/Project_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_Image_URL__c</fullName>
    <formula>IF(NOT(ISBLANK(Project_Photo_Content_Id__c)),
&apos;/sfc/servlet.shepherd/document/download/&apos; + Project_Photo_Content_Id__c + &apos;?operationContext=S1&apos;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Image URL</label>
    <type>Text</type>
</CustomField>