force-app/main/default/objects/Project__c/fields/Project_Photo_Content_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Photo_Content_Id__c</fullName>
    <label>Project Photo Content Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>